update metodo listar produtos